<resources>
    <string name="app_name">Yeyo</string>
    <string name="yeyo">YEYO</string>
    <string name="lotto">LOTTO</string>
    <string name="registerLabel">CREAR CUENTA</string>
    <string name="loginLabel">INICIAR SESIÓN</string>
    <string name="last_date_updated">Fecha del último tiro</string>
    <string name="menu_home">Principal</string>
    <string name="menu_tools">Estadística</string>
    <string name="menu_tiros">Tiros</string>
    <string name="menu_plays">Jugadas</string>

    <string name="loading">Actualizando</string>
    <string name="loadingError">Error Actualizando</string>

    <string name="last_tiros">Últimos Tiros</string>
    <string name="pick3_pick4">Pick 3 - Pick 4</string>3
    <string name="error_message">No se pudo actualizar. Intente mas tarde.</string>

    <string name="mediodia">Mediodía</string>
    <string name="noche">Noche</string>

    <string name="full_name">Nombre y Apellidos</string>
    <string name="name_label">Nombre</string>
    <string name="email">Correo</string>
    <string name="email_usa">Correo USA</string>
    <string name="password">Contraseña</string>

    <string name="user_exist_message">Un usuario con ese correo ya existe</string>
    <string name="user_created">Su cuenta se ha creado satisfactoriamente</string>
    <string name="create_user_error_message">No se ha podido crear al usuario</string>
    <string name="login_user_error_message">No se ha podido iniciar sesión</string>
    <string name="invalid_user_credential">Correo o contraseña incorrecta</string>
    <string name="mandatory_error">Obligatorio</string>
    <string name="invalid_email">Correo Inválido</string>
    <string name="invalid_name">Nombre Inválido</string>

    <string name="settings_label">Mis datos</string>
    <string name="logout">CERRAR SESIÓN</string>
    <string name="email_usa_explain">
        Usaremos este correo para cuando quiera recibir sus ganancias.
        Depositaremos sus fondos en minutos via Quick Pay en esta dirección de correo.
        El propietario de esa cuenta de correo le puede enviar el dinero
        via Wester Union o alguna otra forma de preferencia.
    </string>
    <string name="logout_explain">¿Seguro que desea cerrar sesión y volver a introducir el correo y la contraseña?</string>
    <string name="discard_logout">NO, ¿para qué?</string>
    <string name="confirm_logout">Si</string>

</resources>
