<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logoutActivity">

    <TextView
        android:id="@+id/topTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:text="@string/logout"
        style="@style/logout_label"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topTextView"
        android:background="@color/backgroundLogoutWindow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_explain"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:layout_alignParentTop="true"/>

        <Button
            android:id="@+id/discardLogoutBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/confirmLogoutBT"
            android:text="@string/discard_logout"
            style="@style/logout_confirm_buttons"
            android:background="@color/discard_logout"/>

        <Button
            android:id="@+id/confirmLogoutBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/confirm_logout"
            style="@style/logout_confirm_buttons"
            android:background="@color/confirm_logout"/>

    </RelativeLayout>

</RelativeLayout>