<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_background"
        android:scaleType="centerCrop"
        android:alpha="0.4"/>

    <RelativeLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/backIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_action_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/loginLabel"
            style="@style/mainLabelFragments"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yeyo"
            style="@style/yeyoSplash"
            android:textSize="32sp"/>

        <TextView
            style="@style/lottoSplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lotto"
            android:textSize="14sp" />

        <View
            android:id="@+id/divView"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            style="@style/divRegister"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@android:color/darker_gray">

            <EditText
                android:id="@+id/emailET"
                style="@style/loginFieldsLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordET"
                style="@style/loginFieldsLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loginLabel"
                android:clickable="true"
                android:background="@color/colorPrimaryDark"
                style="@style/loginLabel" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>