<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDataActivity">

    <LinearLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/closeBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_action_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/settings_label"
            style="@style/lastDateUpdated"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topMenu"
        android:background="@color/backgroundSettings">

        <RelativeLayout
            android:id="@+id/emailUsaRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@android:color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/user_data_fields"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/emailUsaTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/email_usa"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/emailUsaExplainTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/emailUsaRelativeLayout"
            style="@style/user_data_fields"
            android:text="@string/email_usa_explain"/>

        <RelativeLayout
            android:id="@+id/nameRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailUsaExplainTV"
            android:background="@android:color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                style="@style/user_data_fields"
                android:text="@string/name_label"/>
            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                style="@style/user_data_fields"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/emailRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameRelativeLayout"
            android:background="@android:color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                style="@style/user_data_fields"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                style="@style/user_data_fields"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <Button
            android:id="@+id/logoutBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/logout"
            style="@style/logoutButton"/>
    </RelativeLayout>

</RelativeLayout>
</layout>