<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_tiros"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TirosFragment">

    <RelativeLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:background="?android:selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_action_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/last_tiros"
            style="@style/mainLabelFragments"/>

    </RelativeLayout>

    <View
        android:id="@+id/topRectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topMenu"
        app:layout_constraintBottom_toTopOf="@+id/mainFL" />

    <TextView
        android:id="@+id/Pick3Pick4TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick3_pick4"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        style="@style/Pick3Pick4Label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topMenu"
        app:layout_constraintBottom_toTopOf="@+id/mainFL"/>

    <FrameLayout
        android:id="@+id/mainFL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Pick3Pick4TV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tirosRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/errorMessageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/loadingIndicatorPB"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>