<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/userBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_action_user" />

        <TextView
            android:id="@+id/lastDateUpdatedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/last_date_updated"
            style="@style/mainLabelFragments"/>

        <ImageButton
            android:id="@+id/updateBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:background="?android:selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_action_update" />

    </RelativeLayout>

    <View
        android:id="@+id/mainRectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/main_container_gradient"
        app:layout_constraintTop_toBottomOf="@+id/topMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/loadingTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/topMenu"
        android:gravity="center"
        android:visibility="invisible"
        android:text="@string/loading"
        style="@style/loading"/>

    <TextView
        android:id="@+id/Pick3Pick4TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick3_pick4"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        style="@style/Pick3Pick4Label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadingTV"/>

    <ImageView
        android:id="@+id/occasionIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/pick3_pick4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pick3Pick4TV"
        app:srcCompat="@drawable/ic_action_day_today" />

    <TextView
        android:id="@+id/numberTV"
        style="@style/tiroNumberToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pick3Pick4TV"/>

    <TextView
        android:id="@+id/dateTV"
        style="@style/tiroDateToday"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/numberTV"
        app:layout_constraintStart_toStartOf="@id/numberTV"
        app:layout_constraintEnd_toEndOf="@+id/numberTV" />

    <View
        android:id="@+id/divView"
        style="@style/DivStyle"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTV"/>

</android.support.constraint.ConstraintLayout>